--- a/app/src/main/res/layout/activity_frontpage.xml
+++ b/app/src/main/res/layout/activity_frontpage.xml
@@ -25,15 +25,30 @@
             android:layout_marginLeft="10dp"
             android:src="@drawable/screenshot_2022_12_30_at_19_07_44_logo_maker_used_by_2_3_million_startups" />
 
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="THE FUTURE OF SOCIAL MEDIA"
+            android:textAlignment="center"
+            android:textSize="60px"
+            android:textColor="@color/black"
+            android:layout_marginTop="-40dp"
+
+            />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="40dp"
             android:background="#F7D238"
             android:text="ENTER"
             android:textSize="20dp" />
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
